--- a/lab-dylan-sanders/package.json
+++ b/lab-dylan-sanders/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test",
     "start": "node server.js"
   },
   "keywords": [],
@@ -15,6 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^2.2.0",
     "mocha": "^2.5.3"
   }
 }
